[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nilmtk-contrib"
version = "0.1.2"
description = "NILMTK-compatible algorithms for energy disaggregation using NILMTK's Rapid Experimentation API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.12"
authors = [
  { name = "NILMTK-contrib developers" }
]
keywords = [
  "energy", "disaggregation", "nilm", "smartmeters", "analytics", "nilmtk"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []

[project.optional-dependencies]
tensorflow = [
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git",
  "numpy>=1.26.0,<2",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "tensorflow>=2.12.0,<2.16.0",
  "tensorflow-io-gcs-filesystem==0.31.0"
]
torch = [
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git",
  "numpy>=1.26.0,<2",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "torch>=2.0,<2.7",
  "tqdm>=4.66"
]
classical = [
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git",
  "numpy>=1.26.0,<2",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "scipy",
  "cvxpy>=1.0.0,<1.8.0",
  "hmmlearn"
]
nilm = [
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git"
]
all = [
  "nilmtk @ git+https://github.com/nilmtk/nilmtk.git",
  "numpy>=1.26.0,<2",
  "pandas",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "tensorflow>=2.12.0,<2.16.0",
  "tensorflow-io-gcs-filesystem==0.31.0",
  "torch>=2.0,<2.7",
  "tqdm>=4.66",
  "cvxpy>=1.0.0,<1.8.0",
  "hmmlearn"
]
dev = [
  "numpy>=1.26.0,<2",
  "pandas",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.0.280",
  "build>=1.0.0"
]

[tool.hatch.version]
path = "nilmtk_contrib/version.py"

[dependency-groups]
dev = [
  "numpy>=1.26.0,<2",
  "pandas",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.0.280",
  "build>=1.0.0"
]
